      reindexed even if they are not visible by the current user. Also
      fixed to work correctly with Zope >= 2.7.6.

    - CMFCore.Skinnable: Don't catch ConflictError in __of__.

    - CMFCore.FSPageTemplate, CMFCore.FSImage:  Remove two more
      Z28-incompatible borrowings of bound methods from base classes
      (http://www.zope.org/Collectors/CMF/321)

  New Features

    - CMFCore.CachingPolicyManager:  Landed a number of changes pioneered
      under / for Plone:

      o Backported a number of Geoff Davis' header management changes.

      o Improved IE support:
      
        * Allowed suppression of 'Last-Modified' header (working around an
          IE bug).

        * Enabled setting IE-proprietary 'Pre-Check' and 'Post-Check' headers
          (http://msdn.microsoft.com/workshop/author/perf/perftips.asp).

    - CatalogTool.CatalogTool now has a private 'unrestrictedSearchResults'
      method bypassing the effective and expiry date and roles. The new
      method has to be used with care to not expose security holes in
      applications using the CatalogTool.

CMF 1.4.8 (2005/03/18)

  Bug Fixes

    - DiscussionTool.getResponseFor was not checkin for the
      DiscussionResponse interface before acquiring, which could result
      in the wrong object being returned in some environments.

    - The MemberDataTool was storing a ImplicitAcquirerWrapper on
      registerMemberData.

    - Changed some places where a bound-method was being bound to a
      different class to use the .im_func of the method

    - Got rid of all uses of apply()

    - FactoryTypeInformation.manage_propertiesForm was being called
      unwrapped.

    - CMFDefault.RegistrationTool: Allow '+' in e-mail addresses.
      (http://zope.org/Collectors/CMF/322)

    - DCWorkflow.DCWorkflow:  include transition ID in the dict for
      workflow actions (http://zope.org/Collectors/CMF/308).

    - CMFCore.CatalogTool: Take into account query restrictions on